# vidsync

./: .gitignore  AGENT.md  README.md  TECH_DEBT.md  package.json  tsconfig.base.json
.github/workflows/: desktop-release.yml
DOCS/: architecture.md  ci-release.md  desktop.md  host-app.md  rooms.md  site-cache.md  sync-protocol.md  unblock-extension.md
apps/desktop/: README.md  index.html  package.json  vite.config.ts
apps/desktop/scripts/: sync-version.mjs
apps/desktop/src/: main.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: api.rs  ffmpeg.rs  lib.rs  main.rs  media_settings.rs  net.rs  protocol.rs  server.rs  session.rs  sync.rs  upnp.rs
apps/host/: Cargo.toml  README.md
apps/host/src/: ext.rs  gui.rs  main.rs  net.rs  player.rs  session.rs  sync.rs  upnp.rs
apps/site/: README.md  package.json  wrangler.jsonc
apps/site/public/: 404.html  app.js  index.html  latest.json  styles.css
apps/site/scripts/: make-latest.mjs  make-updater.mjs
apps/site/src/: worker.ts
apps/web/: .env.example  astro.config.mjs  package.json  wrangler.jsonc
apps/web/public/: _redirects
apps/web/src/: asset-worker.ts
apps/web/src/components/: Turnstile.tsx
apps/web/src/components/home/: HomeApp.tsx  UnblockHomeBanner.tsx
apps/web/src/components/room/: RoomApp.tsx  UnblockStatus.tsx
apps/web/src/layouts/: BaseLayout.astro
apps/web/src/lib/: api.ts  nickname.ts  roomCode.ts
apps/web/src/lib/player/: attachSource.ts
apps/web/src/lib/store/: roomStore.ts
apps/web/src/lib/sync/: client.ts
apps/web/src/lib/unblock/: bridge.ts
apps/web/src/pages/: index.astro  room.astro
apps/web/src/styles/: global.css
extensions/vidsync-unblock/: README.md  background.js  content.js  manifest.json  player.html  player.js  popup.html  popup.js
workers/api/: .dev.vars.example  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
workers/api/src/: codes.ts  cors.test.ts  cors.ts  index.ts  turnstile.ts
workers/api/src/room/: Room.ts
