[package]
name = "vidsync-host"
version = "0.1.0"
edition = "2021"
description = "Serve a local video file over HTTP with temporary UPnP port-forward + VidSync Unblock helper"
license = "MIT"
publish = false

[[bin]]
name = "vidsync-host"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arboard = "3"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
igd-next = { version = "0.17", default-features = false, features = ["aio_tokio"] }
local-ip-address = "0.6"
mime_guess = "2"
open = "5"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
