[package]
name = "vidsync-desktop"
version = "0.1.0"
description = "VidSync desktop (Tauri) — lobby, stream, native player"
authors = ["strange"]
edition = "2021"

[lib]
name = "vidsync_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
arboard = "3"
axum = "0.8"
futures-util = "0.3"
igd-next = { version = "0.17", default-features = false, features = ["aio_tokio"] }
local-ip-address = "0.6"
mime_guess = "2"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
