[package]
name = "vidsync-desktop"
version = "0.1.3"
description = "VidSync desktop (Tauri) — lobby, stream, native player"
authors = ["strange"]
edition = "2021"

[lib]
name = "vidsync_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = true, features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
arboard = "3"
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
igd-next = { version = "0.17", default-features = false, features = ["aio_tokio"] }
local-ip-address = "0.6"
mime_guess = "2"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", default-features = false, features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
  "net",
  "fs",
  "io-util",
  "process",
  "signal",
] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", default-features = false, features = ["io", "rt"] }
tower-http = { version = "0.6", default-features = false, features = ["cors"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
  "std",
  "env-filter",
  "ansi",
] }
url = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"

# Smaller release binaries (Tauri size guide)
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
incremental = false
